tests/e2e-artifacts/sts-with-ingress.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts-with-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sts-with-ingress
  template:
    metadata:
      labels:
        app: sts-with-ingress
    spec:
      containers:
      - name: sts-with-ingress
        image: registry.k8s.io/pause:3.9
---
apiVersion: v1
kind: Service
metadata:
  name: sts-with-ingress
spec:
  selector:
    app: sts-with-ingress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sts-with-ingress
spec:
  rules:
  - host: sts-with-ingress.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sts-with-ingress
            port:
              number: 80
